Final Menu with fixed alignment for fadedbox

--- a/css/menu.css
+++ b/css/menu.css
@@ -62,8 +62,8 @@ h1 {
 	-ms-transition: all 300ms ease-out;
 	transition: all 300ms ease-out;
 	opacity: 0;
-	width: 360px;
-	height: 100px;
+	width: 30vw;
+	height: 10vh;
 	padding: 130px 20px;
 }
 
@@ -180,4 +180,14 @@ p {
 
 figcaption {
 	color: white;
+}
+
+.title1
+{
+	font-variant: small-caps; 
+	font-size:3em;
+}
+.w3-content
+{
+	 width:400px;
 }
